responsive-web-design/product-landing/style/main.css
/* Basic Style and Reset */

*,
*::after,
*::before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-size: 62.5%;
  font-family: "Open Sans", Helvetiva, Arial, sans-serif;
}

body {
  min-height: 100vh;
}

/* Elements styling */

.main-nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-flow: row wrap;
  position: fixed;
  top: 0;
  width: 100%;
  height: 6rem;
  padding: 0 10rem;
  color: white;
  background: black;
}

.logo {
  margin-right: auto;
}

.logo__image {
  margin-right: 1rem;
}

.logo__text {
  display: inline-block;
  font-size: 3rem;
}

.nav {
  font-size: 2rem;
  margin-left: auto;
}

.nav__row {
  display: flex;
  justify-content: space-between;
  list-style: none;
}

.nav__item {
  margin: 0 2rem;
}

.nav__burger {
  display: none;
}

.header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  min-height: 80vh;
  color: white;
  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
    no-repeat center/cover url(../images/hero.jpg);
}

.header__title {
  font-size: 7rem;
  margin-bottom: 1.5rem;
  margin-top: 10rem;
}

.header__slogan {
  font-size: 3rem;
  font-weight: normal;
}

.header__button {
  font-size: 2.5rem;
  font-weight: bold;
  width: 15rem;
  height: 4rem;
  margin-top: 5rem;
  color: white;
  border: none;
  border-radius: 0.5rem;
  background-color: #d97a43;
}

.section {
  padding: 5rem 2rem;
}

.section__title {
  font-size: 5rem;
  margin-bottom: 5rem;
}

.section-jumbo,
.section-pricing {
  background-color: #f8f8f8;
}

.content {
  width: 110rem;
  margin: 0 auto;
  max-width: 100%;
}

.content__row {
  display: flex;
  flex-flow: row wrap-reverse;
  text-align: left;
  justify-content: space-between;
}

.content__row--reverse {
  flex-direction: row-reverse;
}

.content__row--forward {
  margin: 8rem 0;
}

.content__text,
.content__iframe,
.content__media,
.form {
  width: 48%;
}

.content__text {
  line-height: 1.2;
}

.content__subheading {
  font-size: 3.5rem;
  margin-bottom: 2rem;
}

.content__para {
  font-size: 2rem;
}

.content__button {
  width: 15rem;
  height: 4rem;
  font-size: 2rem;
  font-weight: bold;
  margin-top: 3.2rem;
  color: white;
  background-color: #d97a43;
  border: none;
  border-radius: 0.5rem;
}

.content__img {
  width: 100%;
}

.content__cards {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
}

.card {
  display: flex;
  flex-direction: column;
  width: 36rem;
  margin-bottom: 3rem;
  color: white;
  background-color: black;
  box-shadow: 0 0.3rem 0.5rem 0.2rem rgba(0, 0, 0, 0.4);
}

.card__text {
  padding: 5rem 3rem 4rem 3rem;
}

.card__title {
  font-size: 2.5rem;
  margin-bottom: 1.3rem;
}

.card__para {
  font-size: 1.8rem;
}

.card__button {
  width: 40%;
  margin: 0 0 3rem 3rem;
}

.card__img {
  width: 100%;
  height: auto;
  border-bottom: 0;
}

/* Elements state */

.nav__link:link {
  text-decoration: none;
  color: white;
}

.nav__link:visited {
  color: white;
}

/* Media queries */

@media only screen and (max-width: 1400px) {
  html {
    font-size: 55%;
  }

  .main-nav {
    padding: 0 5rem;
  }
}

@media only screen and (max-width: 990px) {
  .main-nav {
    padding: 0 2rem;
  }

  .content {
    width: 50%;
    min-width: 50rem;
  }

  .content__text,
  .content__iframe,
  .content__media,
  .form {
    width: 100%;
  }

  .content__text {
    margin-top: 3rem;
  }

  .card {
    width: 100%;
    margin: 2rem auto;
  }
}

@media only screen and (max-width: 650px) {
  .nav__row {
    flex-direction: column;
    align-items: flex-end;
  }

  .nav__burger {
    display: block;
    top: 1rem;
    font-size: 3rem;
  }

  .nav__item {
    display: none;
    margin: 0;
  }
}

